Add Tutorial 2: Copepods and Fish Spawning Grounds
This tutorial demonstrates WCS raster data access with emodnet.wcs,
combining copepod distribution data from EMODnet Biology with fish
spawning ground suitability data from EMODnet Seabed Habitats.

Key features:
- Accessing and exploring multi-dimensional WCS coverages
- Temporal subsetting to extract specific time periods
- Aligning rasters with different resolutions and coordinate systems
- Building tidy data frames from raster values using tidyterra
- Exploratory analysis comparing conditions across habitat types
- Interactive map visualization with tmap (radio button layer switching)

Supporting changes:
- Add bibliography (references.bib) with ecological citations
- Update nav menu title in _quarto.yml
- Add tidyr and tidyterra to website dependencies
- Add warning about caching WCS/terra objects in CONTRIBUTING.md
- Add WKT explanation to concepts.qmd
- Ignore generated HTML files in tutorials/

--- a/concepts.qmd
+++ b/concepts.qmd
@@ -269,9 +269,11 @@ Earth is a three-dimensional sphere, but maps and computer screens are two-dimen
 **There is no perfect solution** - every projection sacrifices something. This is why dozens of projections exist: each is optimized for different purposes and geographic regions.
 
 ::: callout-note
-## EPSG Codes
+## Specifying CRS: EPSG Codes and WKT
 
-Throughout this page, you'll see CRS referenced by **EPSG codes** (e.g., EPSG:4326, EPSG:3857). EPSG stands for the European Petroleum Survey Group (now maintained by the International Association of Oil & Gas Producers), which created a standardized registry assigning unique numeric codes to coordinate reference systems. These codes provide an unambiguous way to specify which CRS you're using.
+Throughout this page, you'll see CRS referenced by **EPSG codes** (e.g., EPSG:4326, EPSG:3857). EPSG stands for the European Petroleum Survey Group (now maintained by the International Association of Oil & Gas Producers), which created a standardized registry assigning unique numeric codes to coordinate reference systems. These codes provide a concise, unambiguous way to specify which CRS you're using.
+
+Under the hood, CRS definitions are stored as **WKT (Well-Known Text)** strings - a verbose text format that fully describes the coordinate system, datum, units, and other parameters. You'll occasionally encounter WKT when inspecting spatial objects, but in practice you'll usually work with EPSG codes which are simpler and map to the full WKT definitions.
 :::
 
 ### Geographic vs Projected CRS
